Overflow-x on code highlight element fix.

--- a/src/scss/components/_highlight.scss
+++ b/src/scss/components/_highlight.scss
@@ -8,6 +8,6 @@
   pre {
     background-color: $color-primary-darker !important;
     font-size: rem(16px);
-    overflow-x: scroll;
+    overflow-x: auto;
   }
 }
